[package]
name = "yt-dlp-fe"
version = "0.3.0"
description = "A simple YouTube to MP3 downloader"
authors = ["you"]
edition = "2021"

[lib]
name = "yt_dlp_fe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rusty_ytdl = "0.7"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
symphonia = { version = "0.5", features = ["all"] }
mp3lame-encoder = "0.2"
